--- a/ASSH/Hand care-Info.plist
+++ b/ASSH/Hand care-Info.plist
@@ -22,7 +22,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>ASSH</string>
+	<string>com.assh.abc</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
